implementation of rarity matrix

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <h2>Summary</h2>
     <ul>
         <li><a href="units_summary.html">Unit Summary</a></li>
+        <li><a href="units_rarity_matrix.html">Rarity Matrix</a></li>
     </ul>
     <h2>Individual Units</h2>
     <ul>
